welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:22: error: not found: value getMondelargeur
		if(getX() != getMondelargeur - 1) {
                             ^